# Visual-Fortran-Solvers

./: .gitignore  Assert.h90  Assert_Mod.f90  Backward_Substitution.f90  Backward_Substitution.int  Backward_Substitution_Compressed.f90  Backward_Substitution_L.f90  Backward_Substitution_U.f90  Cholesky_Factorization.f90  Cholesky_Factorization.int  Cholesky_Factorization_Compressed.f90  Cholesky_Factorization_Compressed.int  Cholesky_Factorization_L.f90  Cholesky_Factorization_L.int  Cholesky_Factorization_U.f90  Cholesky_Factorization_U.int  Compress_Matrix.f90  Compress_Matrix.int  Const_Mod.f90  Constants_Mod.f90  Create_Matrix_Compressed.f90  Create_Matrix_Compressed.int  Create_Preconditioning_Matrix_Compressed.f90  Create_Preconditioning_Matrix_Compressed.int  Demo_Cholesky_Solver.f90  Demo_Compress_Decompress.f90  Demo_Fill_In.f90  Demo_Gauss_Solver.f90  Demo_Incomplete_Cholesky_Solver.f90  Demo_Incomplete_Cholesky_T_Solver.f90  Demo_Incomplete_LDLT_Solver.f90  Demo_LDLT_Solver.f90  Demo_LDLT_Solver_From_Tflows.f90  Demo_Mod.f90  Dense_Mod.f90  Discretize_Mod.f90  Driver.f90  Expand_Matrix.f90  Expand_Matrix.int  Forward_Substitution.f90  (+63 more)
Assert_Mod/: Handle_Assert.f90
Demo_Mod/: Cholesky_Solver.f90  Compress_Decompress.f90  Fill_In.f90  Gauss_Solver.f90  Incomplete_Cholesky_Solver.f90  Incomplete_Ldlt_Solver.f90  Ldlt_Solver.f90  Ldlt_Solver_From_Tflows.f90  Main.f90
Dense_Mod/: Allocate.f90  Deallocate.f90
Discretize_Mod/: On_Sparse_Matrix.f90
Evolutions/: Backward_Substitution_L.f90  Backward_Substitution_L.int  Backward_Substitution_U.int  Cholesky_Factorization_L.f90  Forward_Substitution_L.f90
Foul_Mod/: Formatted_Write.f90  Get_Escape_Sequence.f90  Integer_To_String.f90  Lower_Case.f90  Split_String.f90  Write.f90
Grid_Mod/: Cell_Number.f90  Cells_I_J_K.f90  Create_Grid.f90  Destroy_Grid.f90  Load_Grid.f90  Save_Vtk_Debug.f90  Save_Vtk_Scalar.f90  Save_Vtk_Vector.f90
In_Out_Mod/: Constants.f90  Legend.f90  Load_Linear_System.f90  Plot_Box.f90  Plot_Bracket_Left.f90  Plot_Bracket_Right.f90  Plot_Brackets.f90  Plot_Circle.f90  Plot_Dense.f90  Plot_Dense_System.f90  Plot_Header.f90  Plot_Ring.f90  Plot_Snippet.f90  Plot_Sparse.f90  Plot_Sparse_System.f90  Plot_Square.f90  Plot_Symbol.f90  Plot_Text.f90  Print_Dense.f90  Print_Matrix.f90  Print_Matrix_Compressed.f90  Print_Sparse.f90  Print_Square.f90  Print_Vector.f90
Input_Output/: Input_Output.int  Load_Linear_System.f90  Load_Linear_System.int  Makefile  Makefile.am  Makefile.in  Print_Matrix.f90  Print_Matrix_Compressed.f90  Print_Vector.f90
Lin_Alg_Mod/: Dense_T.f90  Dense_X_Dense.f90  Dense_X_Vector.f90  Matrix_Matrix_Multiply.f90  Matrix_Vector_Multiply.f90  Matrix_Vector_Multiply_Compressed.f90  Sparse_X_Vector.f90  (+6 more)
Linear_Solvers/: Backward_Substitution_Compressed.f90  Backward_Substitution_Compressed.int  Cholesky_Factorization.f90  Cholesky_Factorization.int  Forward_Substitution.f90  Forward_Substitution_Compressed.f90  Forward_Substitution_Compressed.int  Gaussian_Elimination.int  LDLT_Factorization.f90  LDLT_Factorization.int  LDLT_Factorization_Compressed.f90  LDLT_Solution_Compressed.f90  LDLT_Solution_Compressed.int  Linear_Solvers.int  Makefile  Makefile.am  Makefile.in  Prec_Form.f90  Prec_Form.int  Prec_Solve.int
(+134 files in other folders)
