bin_PROGRAMS = SFS

SFS_SOURCES =					\
  Matrix_Mod.f90				\
  Backward_Substitution.f90			\
  Backward_Substitution_Compressed.f90		\
  Cholesky_Factorization.f90			\
  Cholesky_Factorization_Compressed.f90		\
  Compress_Matrix.f90				\
  Demo_Cholesky_Solver.f90			\
  Demo_Compress_Decompress.f90			\
  Demo_Gauss_Solver.f90				\
  Demo_Incomplete_Cholesky_Solver.f90		\
  Main.f90					\
  Expand_Matrix.f90				\
  Forward_Substitution.f90			\
  Forward_Substitution_Compressed.f90		\
  Gaussian_Elimination.f90			\
  Matrix_Matrix_Multiply.f90			\
  Matrix_Vector_Multiply.f90			\
  Print_Matrix.f90				\
  Print_Matrix_Compressed.f90			\
  Print_Vector.f90				\
  Transpose_Matrix.f90

INCLUDE = -I@top_srcdir@/
