noinst_LIBRARIES = libLinear_Solvers.a

libLinear_Solvers_a_SOURCES = 		\
  Backward_Substitution.f90		\
  Backward_Substitution_Compressed.f90	\
  Cholesky_Factorization.f90		\
  Cholesky_Factorization_Compressed.f90	\
  Forward_Substitution.f90		\
  Forward_Substitution_Compressed.f90	\
  Gaussian_Elimination.f90		\
  LDLT_Factorization.f90		\
  LDLT_Factorization_Compressed.f90	\
  LDLT_Solution.f90			\
  LDLT_Solution_Compressed.f90		\
  Prec_Form.f90				\
  Prec_Solve.f90

INCLUDE = -I@top_srcdir@/
